# yomichan_rs_dictionary

./: .gitignore  dictionary.tscn  file_dialog.gd.uid  icon.svg.import  project.godot  shooter.gdextension  shooter.gdextension.uid
kotobankesjp/: index.json  styles.css  tag_bank_1.json
rust/: Cargo.toml  view.nu
rust/src/: extensions.rs  lib.rs
rust/src/scripts/: add_dictionary_btn.rs  dictionaries.rs  mod.rs  search.rs  settings.rs
