[package]
name = "ycrsdict"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
better_default = "1.0.5"
dirs = "6.0.0"
godot = { version = "0.3.5", features = ["experimental-godot-api"] }
rapidhash = { version = "4.1.0", features = ["unsafe"] }
thiserror = "2.0.16"
yomichan_rs = { path = "/home/dirtneck/dev/yomichan_rs_workspace/yomichan_rs" }
